...
        android:clipToOutline="true"
        android:layout_marginTop="@dimen/space_md"
        app:layout_constraintTop_toBottomOf="@id/authMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <Spinner
            android:id="@+id/gitProviderSpinner"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/text_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            android:spinnerMode="dropdown"
            tools:listitem="@layout/item_spinner"
...
