appId: com.viscouspot.gitsync
---

- runFlow: ../assert.yaml
- runFlow:
    when: 
      notVisible: "GITEA"
    commands:
      - tapOn: 
          id: "gitProviderSpinner"
      - assertVisible: "GITEA"
      - tapOn: "GITEA"
- tapOn: "OAUTH"