appId: com.viscouspot.gitsync
---

- runFlow: ../assert.yaml
- runFlow:
    when: 
      notVisible: "GITHUB"
    commands:
      - tapOn: 
          id: "gitProviderSpinner"
      - assertVisible: "GITHUB"
      - tapOn: "GITHUB"
- tapOn: "OAUTH"